# medical_company

./: .env_sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
medical/: admin.py  forms.py  models.py  services.py  urls.py  views.py
medical/migrations/: 0001_initial.py  0002_initial.py
medical/templates/medical/: company.html  contacts.html  index.html  medical_detail.html  medical_form.html  medical_list.html
medical/templates/medical/include/: inc_menu.html
staff/: admin.py  forms.py  models.py  services.py  urls.py  views.py
staff/migrations/: 0001_initial.py
staff/templates/staff/: staff_detail.html  staff_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: comeonsupuser.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  make_an_appointment.html  password_reset.html  profile.html  users_form.html
