[tool.poetry]
name = "medical-diagnostics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dependence.dependencies]
django = "4.2.2"
psycopg2 = "^2.9.10"
pillow = "^11.1.0"
black = "^24.10.0"
python-dotenv = "^1.0.1"
redis = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
